# p0nygramm

./: .gitignore  Cargo.toml  MAKEFILE  makefile
resources/config/: makefile
resources/sql/Schema-v1/: P0nygrammDb.dbm  add_tag_txt.sql  add_upload.sql  add_user.sql  create_tables.sql  get_comments_for_upload.sql  get_upload_data.sql  get_uploads_range.sql  vote_comment.sql
resources/sql/postgres/: P0nygrammDb.dbm  add_comment.sql  add_tag.sql  add_upload.sql  change_user_pw_by_id.sql  change_user_pw_by_username.sql  create_tables.sql  get_upload_data.sql  get_uploads.sql  get_uploads_range.sql  get_userdata_by_username.sql  vote_tag.sql
resources/static-webcontent/: p0nygramm.css  p0nygramm.js  p0nygramm_api.js  p0nygramm_ui.js
resources/templates/: index.html  makefile
ressources/config/: .gitignore  MAKEFILE  const-config.toml  const-config.toml.tmpl  makefile  system-config.toml  system-config.toml.tmpl
ressources/sql/Schema-v1/: P0nygrammDb.dbm  add-comment.sql  add-upload.sql  add-user.sql  add_comment.sql  add_tag_txt.sql  add_upload.sql  add_user.sql  create_db.sql  create_tables.sql  get_comments_for_upload.sql  get_tag_id.sql  get_tags_for_upload.sql  get_upload_data.sql  get_uploads.sql  get_userdata_by_id.sql  get_userdata_by_username.sql  vote_comment.sql  vote_tag.sql  vote_upload.sql
ressources/static-webcontent/: 403.html  makefile  p0nygramm.css  p0nygramm.js  p0nygramm_api.js  p0nygramm_ui.js
ressources/templates/: index.html
sql/Schema-v1/: P0nygrammDb.dbm  create_db.sql
src/: backend_api.rs  cli.rs  cli.yml  config.rs  db_api.rs  file_api.rs  frontend.rs  js_api.rs  main.rs  security.rs
src/backend_api/: request_data.rs  response_result.rs
src/db_api/: db_result.rs  postgres.rs  redis.rs  result.rs
src/frontend/: template_data.rs
src/js_api/: request_data.rs  response_result.rs
static/webcontent/: index.html
