[package]
name = "p0nygramm"
version = "0.1.0"
authors = ["Voldracarno Draconor <ThaFireDragonOfDeath@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web-middleware-redirect-https = "1.0.0"
actix-files = "0.4.0"
actix-multipart = "0.3.0"
actix-rt = "1.1.1"
actix-session = "0.4.0"
actix-web = "3.1.0"
argonautica = { version = "0.2.0", features = ["simd"] }
chrono = { version = "0.4.19", features = ["serde"] }
fern = "0.6.0"
futures = "0.3.6"
handlebars = { version = "3.5.0", features = ["dir_source"] }
log = "0.4.11"
mime = "0.3.16"
rand = "0.7.3"
redis = { version = "0.17.0", features = ["tokio-rt-core"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
tokio = { version = "0.2.22", features = ["fs", "io-util", "process", "rt-core"] }
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4"] }
toml = "0.5.6"
v_htmlescape = "0.10.3"
